--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', MyOpenWeatherMapApiKey
+    }
+
 }
 
 dependencies {
@@ -45,10 +49,17 @@ dependencies {
 
     androidTestCompile 'com.android.support:support-annotations:23.1.1'
 
+    compile 'com.google.code.gson:gson:2.4'
     //retrofit 적용
-    def retrofitVersion = '2.0.0-beta1'
-    compile "com.squareup.retrofit:retrofit:$retrofitVersion"
-    compile "com.squareup.retrofit:converter-gson:$retrofitVersion"
+    def retrofitVersion = '2.0.0-beta3'
+    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
+
+    compile 'com.jakewharton:butterknife:6.1.0'
+    //compile 'com.github.thorbenprimke:realm-searchview:0.9.1'
 
 
 }
